MFC/AXL(Library)/C, C++/AXDev.h

    // Use Board Number and find Board ID
    DWORD    __stdcall AxlGetBoardID(long lBoardNo, DWORD *upBoardID);
    // Use Board Number and find Board Version
    DWORD    __stdcall AxlGetBoardVersion(long lBoardNo, DWORD *upBoardVersion);
    // Use Board Number/Module Position and find Module ID
    DWORD    __stdcall AxlGetModuleID(long lBoardNo, long lModulePos, DWORD *upModuleID);
    // Use Board Number/Module Position and find Module Version
    DWORD    __stdcall AxlGetModuleVersion(long lBoardNo, long lModulePos, DWORD *upModuleVersion);
    
    DWORD    __stdcall AxlGetModuleNodeInfo(long lBoardNo, long lModulePos, long *upNetNo, DWORD *upNodeAddr);
 
    // Only for PCI-R1604[RTEX]
    // Writing user data to embedded flash memory
    // lPageAddr(0 ~ 199)
    // lByteNum(1 ~ 120)
    // Note) Delay time is required for completing writing operation to Flash(Max. 17mSec)
    DWORD    __stdcall AxlSetDataFlash(long lBoardNo, long lPageAddr, long lBytesNum, BYTE *bpSetData);
    // Reading datas from embedded flash memory
    // lPageAddr(0 ~ 199)
    // lByteNum(1 ~ 120)
    DWORD    __stdcall AxlGetDataFlash(long lBoardNo, long lPageAddr, long lBytesNum, BYTE *bpGetData);
    // IPCOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommand(long lAxisNo, IPCOMMAND sCommand);
    // 8bit IPCOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData08(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
    // Get 8bit IPCOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData08(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
    // 16bit IPCOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData16(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
    // Get 16bit IPCOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData16(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
    // 24bit IPCOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData24(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
    // Get 24bit IPCOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData24(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
    // 32bit IPCOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData32(long lAxisNo, IPCOMMAND sCommand, DWORD uData);
    // Get 32bit IPCOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData32(long lAxisNo, IPCOMMAND sCommand, DWORD *upData);
    
    // QICOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandQi(long lAxisNo, QICOMMAND sCommand);
    // 8bit QICOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData08Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
    // Get 8bit QICOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData08Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
    // 16bit QICOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData16Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
    // Get 16bit QICOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData16Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
    // 24bit QICOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData24Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
    // Get 24bit QICOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData24Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
    // 32bit QICOMMAND Setting at an appoint axis
    DWORD    __stdcall AxmSetCommandData32Qi(long lAxisNo, QICOMMAND sCommand, DWORD uData);
    // Get 32bit QICOMMAND at an appoint axis
    DWORD    __stdcall AxmGetCommandData32Qi(long lAxisNo, QICOMMAND sCommand, DWORD *upData);
    // Get Port Data at an appoint axis - IP
    DWORD    __stdcall AxmGetPortData(long lAxisNo,  WORD wOffset, DWORD *upData);
    // Port Data Setting at an appoint axis - IP
    DWORD    __stdcall AxmSetPortData(long lAxisNo, WORD wOffset, DWORD dwData);
    // Get Port Data at an appoint axis - QI
    DWORD    __stdcall AxmGetPortDataQi(long lAxisNo, WORD byOffset, WORD *wData);
    // Port Data Setting at an appoint axis - QI
    DWORD    __stdcall AxmSetPortDataQi(long lAxisNo, WORD byOffset, WORD wData);
        
    // Set the script at an appoint axis.  - IP
    // sc    : Script number (1 - 4)
    // event : Define an event SCRCON to happen.
    //         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
    // cmd   : Define a selection SCRCMD however we change any content
    // data  : Selection to change any Data.
    DWORD    __stdcall AxmSetScriptCaptionIp(long lAxisNo, long sc, DWORD event, DWORD data);
    // Return the script at an appoint axis.  - IP
    DWORD    __stdcall AxmGetScriptCaptionIp(long lAxisNo, long sc, DWORD *event, DWORD *data);
    // Set the script at an appoint axis.  - QI
    // sc    : Script number (1 - 4)
    // event : Define an event SCRCON to happen.
    //         Set event, a number of axis, axis which the event happens, event content 1, 2 attribute
    // cmd   : Define a selection SCRCMD however we change any content
    // data  : Selection to change any Data.
    DWORD    __stdcall AxmSetScriptCaptionQi(long lAxisNo, long sc, DWORD event, DWORD cmd, DWORD data);
    // Return the script at an appoint axis. - QI
    DWORD    __stdcall AxmGetScriptCaptionQi(long lAxisNo, long sc, DWORD *event, DWORD *cmd, DWORD *data);
    // Clear orders a script inside Queue Index at an appoint axis
    // uSelect IP. 
    // uSelect(0): Script Queue Index Clear.
    //        (1): Caption Queue Index Clear.
    // uSelect QI. 
    // uSelect(0): Script Queue 1 Index Clear.
    //        (1): Script Queue 2 Index Clear.
    DWORD    __stdcall AxmSetScriptCaptionQueueClear(long lAxisNo, DWORD uSelect);
    
    // Return Index of a script inside Queue at an appoint axis.
    // uSelect IP
    // uSelect(0): Read Script Queue Index
    //        (1): Read Caption Queue Index
    // uSelect QI. 
    // uSelect(0): Read Script Queue 1 Index
    //        (1): Read Script Queue 2 Index
    DWORD    __stdcall AxmGetScriptCaptionQueueCount(long lAxisNo, DWORD *updata, DWORD uSelect);
    // Return Data number of a script inside Queue at an appoint axis.
    // uSelect IP
    // uSelect(0): Read Script Queue Data
    //        (1): Read Caption Queue Data
    // uSelect QI.
    // uSelect(0): Read Script Queue 1 Data
    //        (1): Read Script Queue 2 Data
    DWORD    __stdcall AxmGetScriptCaptionQueueDataCount(long lAxisNo, DWORD *updata, DWORD uSelect);
    // Read an inside data.
    DWORD    __stdcall AxmGetOptimizeDriveData(long lAxisNo, double dMinVel, double dVel, double dAccel, double  dDecel, 
            WORD *wRangeData, WORD *wStartStopSpeedData, WORD *wObjectSpeedData, WORD *wAccelRate, WORD *wDecelRate);
    // Setting up confirmes the register besides within the board by Byte.
    DWORD    __stdcall AxmBoardWriteByte(long lBoardNo, WORD wOffset, BYTE byData);
    DWORD    __stdcall AxmBoardReadByte(long lBoardNo, WORD wOffset, BYTE *byData);
    // Setting up confirmes the register besides within the board by Word.
    DWORD    __stdcall AxmBoardWriteWord(long lBoardNo, WORD wOffset, WORD wData);
    DWORD    __stdcall AxmBoardReadWord(long lBoardNo, WORD wOffset, WORD *wData);
    // Setting up confirmes the register besides within the board by DWord.
    DWORD    __stdcall AxmBoardWriteDWord(long lBoardNo, WORD wOffset, DWORD dwData);
    DWORD    __stdcall AxmBoardReadDWord(long lBoardNo, WORD wOffset, DWORD *dwData);
    // Setting up confirmes the register besides within the Module by Byte.
    DWORD    __stdcall AxmModuleWriteByte(long lBoardNo, long lModulePos, WORD wOffset, BYTE byData);
    DWORD    __stdcall AxmModuleReadByte(long lBoardNo, long lModulePos, WORD wOffset, BYTE *byData);
    // Setting up confirmes the register besides within the Module by Word.
    DWORD    __stdcall AxmModuleWriteWord(long lBoardNo, long lModulePos, WORD wOffset, WORD wData);
    DWORD    __stdcall AxmModuleReadWord(long lBoardNo, long lModulePos, WORD wOffset, WORD *wData);
    // Setting up confirmes the register besides within the Module by DWord.
    DWORD    __stdcall AxmModuleWriteDWord(long lBoardNo, long lModulePos, WORD wOffset, DWORD dwData);
    DWORD    __stdcall AxmModuleReadDWord(long lBoardNo, long lModulePos, WORD wOffset, DWORD *dwData);
    // Set EXCNT (Pos = Unit)
    DWORD    __stdcall AxmStatusSetActComparatorPos(long lAxisNo, double dPos);
    // Return EXCNT (Positon = Unit)
    DWORD    __stdcall AxmStatusGetActComparatorPos(long lAxisNo, double *dpPos);
    // Set INCNT (Pos = Unit)
    DWORD    __stdcall AxmStatusSetCmdComparatorPos(long lAxisNo, double dPos);
    // Return INCNT (Pos = Unit)
    DWORD    __stdcall AxmStatusGetCmdComparatorPos(long lAxisNo, double *dpPos);
    
//=========== Append function. =========================================================================================================
    // Increase a straight line interpolation at speed to the infinity.
    // Must put the distance speed rate.
    DWORD    __stdcall AxmLineMoveVel(long lCoord, double dVel, double dAccel, double dDecel);
//========= Sensor drive API( Read carefully: Available only PI , No function in QI) =========================================================================
    // Set mark signal( used in sensor positioning drive)
    DWORD    __stdcall AxmSensorSetSignal(long lAxisNo, DWORD uLevel);
    // Verify mark signal( used in sensor positioning drive)
    DWORD    __stdcall AxmSensorGetSignal(long lAxisNo, DWORD *upLevel);
    // Verify mark signal( used in sensor positioning drive)state
    DWORD    __stdcall AxmSensorReadSignal(long lAxisNo, DWORD *upStatus);
    
    // Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop. Applied motion is started upon the start of API, and escapes from the API after the motion is completed.
    DWORD    __stdcall AxmSensorMovePos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lMethod);
    // Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop. Applied motion is started upon the start of API, then escapes from the API immediately without waiting until the motion is completed.
    DWORD    __stdcall AxmSensorStartMovePos(long lAxisNo, double dPos, double dVel, double dAccel, double dDecel, long lMethod);
    DWORD    __stdcall AxmHomeGetStepTrace(long lAxisNo, long *lpStepCount, DWORD *upMainStepNumber, DWORD *upStepNumber, DWORD *upStepBranch);
    
//======= Additive home search (Applicable to PI-N804/404  only) =================================================================================

    // Set home setting parameters of axis specified by user. (Use exclusive-use register for QI chip).
    // uZphasCount : Z phase count after home completion. (0 - 15)
    // lHomeMode   : Home setting mode( 0 - 12)
    // lClearSet   : Select use of position clear and remaining pulse clear (0 - 3)
    //               0: No use of position clear, no use of remaining pulse clear
    //               1: use of position clear, no use of remaining pulse clear
    //               2: No use of position clear, use of remaining pulse clear
    //               3: use of position clear, use of remaining pulse clear
    // dOrgVel : Set Org  Speed related home
    // dLastVel: Set Last Speed related home
    DWORD    __stdcall AxmHomeSetConfig(long lAxisNo, DWORD uZphasCount, long lHomeMode, long lClearSet, double dOrgVel, double dLastVel, double dLeavePos);
    // Return home setting parameters of axis specified by user.
    DWORD    __stdcall AxmHomeGetConfig(long lAxisNo, DWORD *upZphasCount, long *lpHomeMode, long *lpClearSet, double *dpOrgVel, double *dpLastVel, double *dpLeavePos); //KKJ(070215)
    
    // Start home search of axis specified by user
    // Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
    // If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
    // Move direction      : CW when Vel value is positive, CCW when negative.
    DWORD    __stdcall AxmHomeSetMoveSearch(long lAxisNo, double dVel, double dAccel, double dDecel);
    // Start home return of axis specified by user.
    // Set when lHomeMode is used: set 0 - 12  
    // If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
    // Move direction      : CW when Vel value is positive, CCW when negative.
    DWORD    __stdcall AxmHomeSetMoveReturn(long lAxisNo, double dVel, double dAccel, double dDecel);
    
    // Home separation of axis specified by user is started. 
    // Move direction      : CW when Vel value is positive, CCW when negative.
    DWORD    __stdcall AxmHomeSetMoveLeave(long lAxisNo, double dVel, double dAccel, double dDecel);
    // User start home search of multi-axis specified by user. 
    // Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
    // If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
    // Move direction      : CW when Vel value is positive, CCW when negative.
    DWORD    __stdcall AxmHomeSetMultiMoveSearch(long lArraySize, long *lpAxesNo, double *dpVel, double *dpAccel, double *dpDecel);